package ar.edu.davinci.dv_ds_20242c_g13.domain;

public enum EstadoPrenda {
	NUEVA,
    PROMOCION,
    LIQUIDACION
}
